examples/scanner/literals/fail/invalid_octal_seq.axo
const bad = "\999"
print(bad)
